# visio-mobile

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build-ios.yml  ci.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/i18n/: de.json  en.json  es.json  fr.json  it.json  nl.json
android/app/src/main/kotlin/io/visio/mobile/: AudioCapture.kt  AudioPlayout.kt  CallForegroundService.kt  CameraCapture.kt  MainActivity.kt  NativeVideo.kt  VideoSurfaceView.kt  VisioApplication.kt  VisioManager.kt
android/app/src/main/kotlin/io/visio/mobile/navigation/: AppNavigation.kt
android/app/src/main/kotlin/io/visio/mobile/ui/: CallScreen.kt  ChatScreen.kt  HomeScreen.kt  InCallSettingsSheet.kt  ParticipantListSheet.kt  SettingsScreen.kt  VisioLogo.kt
android/app/src/main/kotlin/io/visio/mobile/ui/i18n/: Strings.kt
android/app/src/main/kotlin/io/visio/mobile/ui/theme/: Colors.kt  Theme.kt
android/app/src/main/kotlin/uniffi/visio/: visio.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ri_add_line.xml  ri_arrow_left_s_line.xml  ri_arrow_up_s_line.xml  ri_camera_switch_line.xml  ri_chat_1_line.xml  ri_close_line.xml  ri_group_line.xml  ri_hand.xml  ri_mic_line.xml  ri_mic_off_fill.xml  ri_mic_off_line.xml  ri_phone_fill.xml  ri_send_plane_2_fill.xml  ri_settings_3_line.xml  ri_video_off_fill.xml  ri_video_off_line.xml  ri_video_on_line.xml
android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
crates/visio-core/: Cargo.toml
crates/visio-core/src/: audio_playout.rs  auth.rs  chat.rs  controls.rs  errors.rs  events.rs  hand_raise.rs  lib.rs  participants.rs  room.rs  secure_storage.rs  session.rs  settings.rs
crates/visio-desktop/: Cargo.toml  Info.plist  tauri.conf.json
crates/visio-desktop/capabilities/: default.json
crates/visio-desktop/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/visio-desktop/frontend/src/: App.css  App.tsx  main.tsx  tauri-mock.ts  vite-env.d.ts
crates/visio-desktop/icons/: icon.icns
crates/visio-desktop/src/: audio_cpal.rs  camera_macos.rs  lib.rs  main.rs
crates/visio-ffi/: Cargo.toml  build.rs  uniffi.toml
crates/visio-ffi/src/: lib.rs  visio.udl
crates/visio-ffi/src/blur/: convert.rs  mod.rs  model.rs  process.rs  segment.rs
crates/visio-ffi/tests/: blur_integration.rs
crates/visio-video/: Cargo.toml
crates/visio-video/src/: android.rs  desktop.rs  ios.rs  lib.rs
docs/plans/: 2026-03-01-build-pipeline-implementation.md  2026-03-01-build-pipeline-video-design.md  2026-03-01-i18n-design.md  2026-03-01-participant-list-design.md  2026-03-01-phase-1-core-room.md  2026-03-01-settings-store-design.md  2026-03-01-settings-store-implementation.md  2026-03-01-ux-overhaul-design.md  2026-03-01-ux-overhaul-implementation.md  2026-03-01-v2-rewrite-design.md  2026-03-02-deep-links-design.md  2026-03-02-deep-links-implementation.md  2026-03-02-room-url-validation-design.md  2026-03-02-room-url-validation.md  2026-03-04-in-call-settings-panel.md  2026-03-07-advanced-features-design.md  2026-03-07-background-blur-implementation.md
i18n/: de.json  en.json  es.json  fr.json  it.json  nl.json
ios/VisioMobile/: AudioPlayout.swift  CameraCapture.swift  ContentView.swift  Info.plist  Theme.swift  VideoFrameRouter.swift  VisioManager.swift  VisioMobileApp.swift
ios/VisioMobile.xcodeproj/: project.pbxproj
ios/VisioMobile/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/VisioMobile/Services/: CallKitManager.swift  PiPManager.swift
ios/VisioMobile/Views/: CallView.swift  ChatView.swift  HomeView.swift  InCallSettingsSheet.swift  ParticipantListSheet.swift  SettingsView.swift  VideoLayerView.swift  VisioLogo.swift
ios/VisioMobile/i18n/: Strings.swift  en.json  fr.json
ios/fastlane/: Fastfile
scripts/: build-android.sh  build-ios.sh  download-model.sh  generate-icons.sh
