[workspace]
members = [
    "crates/visio-core",
    "crates/visio-video",
    "crates/visio-ffi",
    "crates/visio-desktop",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/mmaudet/visio-mobile"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
livekit = "=0.7.32"
livekit-api = "0.4"
uniffi = "0.29"
