[package]
name = "visio-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = "0.4"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
livekit = { workspace = true, features = ["rustls-tls-webpki-roots"] }
livekit-api = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tempfile = "3"
