[package]
name = "visio-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = "0.4"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
livekit = { workspace = true, features = ["rustls-tls-webpki-roots"] }
livekit-api = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
futures-util = { workspace = true }
regex = "1"
url = "2"

# Desktop secure storage (Keychain/libsecret/Credential Manager)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
keyring = "3"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
livekit-api = { workspace = true }
