[package]
name = "visio-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
visio-core = { path = "../visio-core" }
uniffi = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[features]
default = []
cli = ["uniffi/cli"]

[[bin]]
name = "uniffi-bindgen"
required-features = ["cli"]
