[package]
name = "visio-video"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
livekit = { workspace = true, features = ["rustls-tls-webpki-roots"] }
tracing = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
