[package]
name = "visio-video"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
livekit = { workspace = true, features = ["rustls-tls-webpki-roots"] }
tokio = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk = { version = "0.9", features = ["media"] }
ndk-sys = "0.6"

[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.22"
